k8s-config/raptor-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: raptor-service-lb-8080
spec:
  type: LoadBalancer
  selector:
    app: raptor-service
  ports:
  - name: http 
    protocol: TCP
    port: 80
    targetPort: 8080
  externalIPs:
  - 10.11.23.120
