k8s-config/raptor-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: raptor-service-np-8080
spec:
  type: NodePort
  selector:
    app: raptor-service
  ports:
  - name: http 
    protocol: TCP
    # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    port: 8080
    targetPort: 8080
    # Optional field
    # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
    nodePort: 30007
