k8s-config/raptor-service-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: raptor-service-pod
  labels:
    app: raptor-service
spec:
  containers:
  - name: raptor-service
    image: raptor-service:latest
    resources:
        requests:
            memory: "256Mi"
            cpu: "250m"
        limits:
            memory: "512Mi"
            cpu: "500m"
    imagePullPolicy: IfNotPresent 
    ports:
    - containerPort: 8080
    
    
---
apiVersion: v1
kind: Service
metadata:
  name: raptor-service-ci-8080
spec:
  selector:
    app: raptor-service
  ports:
  - name: http 
    protocol: TCP
    port: 8080
    targetPort: 8080
