k8s-config/raptor-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: raptor-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-ingress
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: raptor-service-8080
            port:
              number: 8080
              
              
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx-ingress
  labels:
    app.kubernetes.io/component: controller 
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
